Rework from scratch

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     "airbnb"
   ],
   "plugins": [
-    "transform-decorators",
+    "transform-decorators-legacy",
     "transform-object-rest-spread",
     "react-hot-loader/babel"
   ],
